Terminada la presentacion de imagenes

--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Martel&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -53,9 +55,57 @@
                 <img src="./nvoimg/presentacion1.png" alt="Concierto en vivo" class="img-pre1">
                 <img src="./nvoimg/presentacion2.png" alt="Concierto en vivo" class="img-pre1">
             </div>
+            <div class="sobre-presentacion1">
+                <p>De NOCHE</p>
+                <div class="descripcion">
+
+                </div>
+            </div>
+            <div class="sobre-presentacion2">
+                <p>De DIA</p>
+                <div>
+
+                </div>
+            </div>
+            <div class="sobre-presentacion3">
+                <p>La elección es <u>TUYA</u></p>
+            </div>
         </section>
-
-
+        <section class="interes">
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magnam nam atque alias laboriosam, eum
+                    ducimus modi iure rem ipsam quae dicta exercitationem inventore ab optio quasi minima temporibus
+                    nobis?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In suscipit architecto, dolor fugit debitis
+                    ipsum possimus corporis quidem porro, voluptate ducimus placeat quisquam! Ea reprehenderit, officia
+                    laboriosam eaque pariatur nesciunt?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam molestiae itaque unde quos culpa
+                    optio sit pariatur possimus? Fuga non facilis necessitatibus aut cumque explicabo odit alias
+                    asperiores illum vitae!</p>
+            </div>
+        </section>
+        <section class="interes">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, dolores cumque corporis, nisi, quo consectetur minima magnam perspiciatis omnis possimus voluptas officiis? Voluptas hic dolor repellat ea nihil labore suscipit?
+            Voluptatum aspernatur odit deserunt nihil repudiandae, cumque iusto molestias dolor! Dolor totam eligendi obcaecati dicta, nesciunt veritatis placeat modi doloremque tempora illo quaerat doloribus beatae voluptatem eaque soluta. Odio, commodi.
+            Id corrupti cum quidem atque? Sunt tempora totam earum, officiis est inventore distinctio dolorem eius possimus, dignissimos facere molestiae at ullam? Eos, perferendis voluptates hic blanditiis doloribus quidem provident sequi.
+            Exercitationem dolorum in, magni ex suscipit quia debitis facilis. Nulla sint, corporis iusto recusandae ratione voluptatum soluta quibusdam tempore accusamus hic, alias unde. Beatae tempora laudantium harum fugiat exercitationem nisi?
+            Voluptatem accusantium magnam quod laborum eveniet nemo vero in! Aspernatur quasi temporibus quae expedita? Quae quasi vero fuga fugiat corporis, repudiandae aliquam, accusantium mollitia qui, ipsa a iure possimus molestias!
+            Totam soluta reiciendis aliquam autem, maxime laborum accusamus natus? Tenetur iusto fuga beatae assumenda? Laborum delectus quos neque? Nisi velit enim cum culpa at, asperiores molestias adipisci nesciunt eum illum!
+            Libero assumenda vitae sapiente neque earum dolores saepe explicabo! Laboriosam magni architecto autem, maiores cumque, iusto consequuntur commodi quod nam minima mollitia quasi consectetur perferendis, quidem ad! Sint, dolorum veniam?
+            Earum iusto doloribus laborum eum quae est laudantium, officiis vitae aspernatur beatae error vel autem velit accusamus consequatur ea dignissimos voluptatem sapiente illum pariatur nisi eos perspiciatis nesciunt? Eos, alias?
+            Eos error nemo excepturi? Nisi iure harum atque doloremque quia quod ex, dicta, asperiores veritatis laborum in aliquid culpa quidem similique ad velit est reiciendis! Qui id ratione corrupti pariatur.
+            Nihil aspernatur totam libero eligendi, ex saepe quo, numquam maxime deleniti iusto accusamus mollitia aperiam quam quisquam iure, consectetur porro molestias. Ducimus quisquam delectus quas ullam magnam perspiciatis nihil impedit!
+            Facere iste eaque obcaecati nisi dolores nam nihil porro! Consequuntur dolor, eius animi tempora aspernatur sed modi obcaecati ipsam accusamus nihil adipisci ad impedit quo ab possimus voluptatibus eum fugit?
+            Sapiente dolore molestias laudantium! Rerum quod vitae a nesciunt delectus obcaecati nulla est id nihil, amet atque, totam, natus animi in eius magni? Natus, culpa dolore ut illo magnam nemo.
+            Facere neque culpa sit recusandae sint quisquam libero itaque incidunt adipisci aut repellendus architecto, quidem veniam accusantium dolores doloremque dignissimos illo atque dicta assumenda quasi quas nostrum dolorem! Asperiores, aperiam?
+            Cum tempora aspernatur aut ipsum deserunt ex, neque eius velit temporibus corrupti dolorum, doloremque, dolorem nemo commodi voluptatem facilis aliquam numquam hic vel aliquid placeat! Autem maxime ea quas quos!
+            Neque quos ipsa ab nulla voluptatibus labore provident totam, dignissimos fuga nam est inventore? Nisi in rem, velit ipsa expedita labore nulla, dolorum nemo excepturi obcaecati cumque ea perferendis. Quo?
+            Nulla amet earum illo molestiae cumque maxime doloribus veritatis id sequi porro voluptates accusantium tenetur vel, cum, ipsam repudiandae necessitatibus minus? Quasi, velit. Veritatis, aliquam mollitia. Odio beatae vel commodi?
+            Ducimus quo, blanditiis ad incidunt mollitia, ipsum nesciunt sit error est corporis impedit? Aliquid qui, possimus adipisci doloribus, reprehenderit minus exercitationem incidunt corporis ab mollitia, fugit a nemo! Ducimus, dolorum.
+            Facilis, temporibus ex iure est corrupti asperiores sit magnam, quia neque at in rerum placeat? Provident, ratione. Dolor vitae beatae, doloremque quasi aliquid cum temporibus corporis ea dolores repellat! Iusto!
+            Libero laborum ducimus ipsa totam sunt suscipit, quae, possimus fugit expedita nobis, inventore sit ad. Aut odio a veniam, minus harum, velit sequi laudantium soluta expedita, quae officia dolores ex?
+            Natus illum nisi magnam earum culpa labore explicabo cupiditate id repellat, veritatis suscipit et aut eius doloremque officiis veniam delectus blanditiis aliquid libero aspernatur consequatur at soluta necessitatibus placeat! Tempora.</p>
+        </section>
     </main>
 </body>
 
